# perfsize

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python-test.yml
perfsize/: perfsize.py
perfsize/environment/: mock.py
perfsize/load/: mock.py
perfsize/reporter/: mock.py
perfsize/result/: gatling.py  mock.py
perfsize/step/: all.py  mock.py
tests/: test_perfsize.py
tests/result/: test_gatling.py
